<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <artifactId>levelledmobs-parent</artifactId>
    <groupId>me.lokka30</groupId>
    <version>4</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <artifactId>levelledmobs-plugin-bukkit</artifactId>
  <version>4.0.0-alpha-1</version>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.jeff_media</groupId>
      <artifactId>MorePersistentDataTypes</artifactId>
      <version>2.3.1</version>
      <scope>compile</scope>
    </dependency>
    <!-- TODO add update checker from jeff_media -->
    <dependency>
      <groupId>de.themoep</groupId>
      <artifactId>minedown</artifactId>
      <version>1.7.1-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>de.tr7zw</groupId>
      <artifactId>item-nbt-api-plugin</artifactId>
      <version>2.9.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>me.lokka30</groupId>
      <artifactId>levelledmobs-api-bukkit</artifactId>
      <version>4.0.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.18.1-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.spongepowered</groupId>
      <artifactId>configurate-yaml</artifactId>
      <version>4.1.2</version> <!-- remember to edit libraries list in plugin.yml if updating -->
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>codemc-repo</id>
      <url>https://repo.codemc.org/repository/maven-public/</url>
      <layout>default</layout>
    </repository>
    <repository>
      <id>jeff-media-public</id>
      <url>https://hub.jeff-media.com/nexus/repository/jeff-media-public/</url>
    </repository>
    <repository>
      <id>minebench-repo</id>
      <url>https://repo.minebench.de/</url>
    </repository>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
  </repositories>

  <build>
    <defaultGoal>clean package</defaultGoal>
    <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <createDependencyReducedPom>false</createDependencyReducedPom>
          <minimizeJar>true</minimizeJar>
          <filters>
            <filter>
              <artifact>*:*</artifact>
              <excludes>
                <exclude>META-INF/MANIFEST.MF</exclude>
              </excludes>
            </filter>
          </filters>
          <relocations>
            <relocation>
              <pattern>com.jeff_media.morepersistentdatatypes</pattern>
              <shadedPattern>me.lokka30.levelledmobs.libs.morepersistentdatatypes</shadedPattern>
            </relocation>
            <relocation>
              <pattern>de.themoep.minedown</pattern>
              <shadedPattern>me.lokka30.levelledmobs.libs.minedown</shadedPattern>
            </relocation>
          </relocations>
        </configuration>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources/</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>
</project>